--- a/writeup.tex
+++ b/writeup.tex
@@ -7,15 +7,19 @@
 \begin{document}
     \title{Applying the Borsuk-Ulam Theorem}
     \author{Akash Dhiraj}
-    %\address{}
-    %\email{ad739@cornell.edu}
+    \email{ad739@cornell.edu}
+    \author{Sidhanth Holalkere}
+    \email{sid@cornell.edu}
     \date{\today}
+
+    %add reference to borsuk-ulam
+    \begin{abstract}
+        This writeup acts as a sketch of a presentation on topological combinatorics given for Math 2240 at Cornell. We hope present one potential answer to the question of ``why topology?" by connecting two seemingly disparate areas of mathematics: combinatorics (where we work with the discrete) and topology (where we work with the continuous). Broadly, the talk begins with a general introduction to topology, setting up the neccesary machinary to sate and prove the famous \emph{Borsuk-Ulam} theorem (), and continues to discuss its various combinatorial applications. 
+    \end{abstract}
 
     \maketitle
 
-    \newpage
-
-    Our goal with this talk is to motivate topology more generally
+    Through the course of this talk, we hope to convince 
 
     \section{Setup}
 
@@ -31,9 +35,22 @@
 
     \section{Hex Game}
 
+    The game of Hex is played between two players, say red and green. Each of them takes turns coloring a finite hexagonal grid. After all hexagons are colored, red wins if there's a red path connecting the top and bottom, and green wins if there's a green path connecting the left and right. 
+
+    \begin{theorem}
+        Hex can never end in a tie.
+    \end{theorem}
+
+    We won't assume things
+
+
+
     \newpage
 
-    \section{Necklace Problem}
+    \section{Fair Division}
+
+    Sidhanth and Akash steal a necklace with precious stones arranged along it. Suppose there were $d$ kinds of stones, an even number of each kind. Naturally, we'd like to split the stones between us such that we both have the same number of jewels of each kind
+
 
     \newpage
 
