--- a/writeup.tex
+++ b/writeup.tex
@@ -6,11 +6,14 @@
 \newtheorem{cor}[thm]{Corollary}
 
 \theoremstyle{definition}
+\newtheorem{dfn}[thm]{Definition}
+\newtheorem{ex}[thm]{Example}
 \newtheorem*{rem}{Remark}
 
 \usepackage[margin=1in]{geometry}
 \usepackage{caption}
 \usepackage{tikz}
+\usepackage{hyperref}
 
 \begin{document}
     \title{Applying the Borsuk-Ulam Theorem}
@@ -22,24 +25,87 @@
 
     %add reference to borsuk-ulam
     \begin{abstract}
-        This writeup acts as a sketch of a presentation on topological combinatorics given for Math 2240 at Cornell. We hope present one potential answer to the question of ``why topology?" by connecting two seemingly disparate areas of mathematics: combinatorics (where we work with the discrete) and topology (where we work with the continuous). Broadly, the talk begins with a general introduction to topology, setting up the neccesary machinary to state and prove the famous \emph{Borsuk-Ulam} theorem (Theorem \ref{main}), and continues to discuss its various combinatorial applications. 
+        This writeup acts as a sketch of a presentation on topological combinatorics given for Math 2240 at Cornell. We hope to present one potential answer to the question of ``why topology?" by connecting two seemingly disparate areas of mathematics: combinatorics (where we work with the discrete) and topology (where we work with the continuous).
     \end{abstract}
 
     \maketitle
 
-    We assume no more than familiarity with the standard Euclidean topology in $\mathbb R^n$.
+    For the sake avoiding repetition and our own carelessness, assume all maps are continuous unless stated otherwise. 
+    
+    Much of the material from this talk comes from \cite{topcombi}.
 
-    \section{Setup}
+    \section{Borsuk-Ulam \& Alternate Formulations}
 
-    \newpage
+    Naturally, let's start with vocab.
 
-    \section{Borsuk-Ulam}
+    \begin{dfn}
+    The $n$-sphere $\mathbb S^n$ is the subset $$\{\mathbf x \in \mathbb R^{n+1} \mid |x| = 1\}$$ of $\mathbb R^{n+1}$. Similarly, $B^n$ is the unit ball centered around $\mathbf 0$, i.e. $\{\mathbf x \in \mathbb R^n \mid |x| \leq 1\}$.
+    \end{dfn}
+
+    \begin{dfn}
+        Two points $\mathbf x, \mathbf y \in \mathbb S^n$ are antipodal if $\mathbf x = -\mathbf y$, i.e. they're on diametrically opposite ends of the sphere. A map $f: \mathbb S^n \to X$ is antipodal (or odd) if $f(-x) = -f(x)$.
+    \end{dfn}
+
+    Note that the superscripts of $\mathbb S^n$ and $B^n$ denote the dimensions of our sets, not the dimension of the space they live in. I.e. the boundary of $B^n$ is $S^{n-1}$, not $S^n$.
 
     \begin{thm}[Borsuk-Ulam]
         \label{main}
         Given a continuous map $f: \mathbb S^n \to \mathbb R^n$, $f$ identifies two antipodal points: i.e. $\exists \mathbf x \in \mathbb S^n$ such that $f(\mathbf x) = f(-\mathbf x)$.
     \end{thm}
 
+    While originally formualted by Stanislaw Ulam, the first proof of Theorem \ref{main} was given by Karol Borsuk. Since then Borsuk-Ulam has found a number of equivalent formulations, proofs, and applications both at the heart and entirely away from topology. Ultimately, we only hope to present of small slice this. For a comprehensive treatment, see \cite{stein}.
+
+    \begin{ex}
+        The one dimension case is boils down to IVT. For $f: \mathbb S^1 \to \mathbb R$, consider $F(x) = f(x) - f(-x)$. Notice that our problem reduces to looking for the zeros of $F$. Now, pick some $x \in \mathbb S^1$. If $F(x) = 0$, we're done. Otherwise, $F(x)$ and $F(-x)$ have differing signs by the antipodality of $F$. Hence, IVT gives the existence of $y \in \mathbb S^1$ such that $F(y) = 0 \implies f(y) = f(-y)$. 
+    \end{ex}
+
+    By law, all talks about Borsuk-Ulam must present the following example.
+
+    \begin{ex}
+        Since temprature and pressure vary continuously across the earth, mapping each place to it's temprature-pressure pair on the plane gives a map $f: \mathbb S^2 \to \mathbb R^2$. Hence, there exists two antipodal points on the earth with the same temprature and pressure.
+    \end{ex}
+
+    Let's see some equivalent forms!
+
+    \begin{thm}[Equivalent Formulations]
+        \label{equiv}
+        For $n \geq 0$, the following are equivalent and true:
+        \begin{enumerate}
+            \item Borusk-Ulam, Theorem \ref{main}.
+            \item For antipodal $f: \mathbb S^n \to \mathbb R^n$, there exists $\mathbf x \in \mathbb S^n$ such that $f(\mathbf x) = 0$.
+            \item There does not exist an antipodal map $f: \mathbb S^n \to \mathbb S^{n-1}$.
+            \item There does not exist $f: B^n \to \mathbb S^n$ that is antipodal on the boundary.
+            \item For any cover $F_1,\ldots,F_{n+1}$ of the sphere $\mathbb S^n$ by $n+1$ closed sets, there is at least one set containing a pair of antipodal points.
+            \item For any cover $U_1,\ldots,U_{n+1}$ of the sphere $\mathbb S^n$ by $n+1$ open sets, there is at least one set containing a pair of antipodal points.
+        \end{enumerate}
+    \end{thm}
+
+    \begin{proof} We'll proceed by $(1) \iff (2) \iff (3) \iff (4)$.
+
+        \begin{enumerate}
+            \item[$(1) \implies (2)$] For antipodal $f$, there exists $\mathbf x$ such that $$f(\mathbf x) = f(-\mathbf x) = -f(\mathbf x) \implies f(\mathbf x) = 0.$$
+            \item[$(2) \implies (1)$] For continuous $f$, $F(x) = f(x) - f(-x)$ is antipodal so there exists $\mathbf x$ such that $$F(\mathbf x) = 0 \implies f(\mathbf x) = -f(-\mathbf x).$$
+        \end{enumerate}
+    \end{proof}
+
+    Finally, we'll prove the $n=2$ case. While the higher dimensional cases aren't excessively technical, we'll skip it to stay within time. See \cite[ch 2]{topcombi} (or the appendix if I add it later) for the full proof.
+
+    \begin{proof}[Proof of Borsuk-Ulam for $n=2$]
+
+    \end{proof}
+
+    An easy yet powerful consequence of Borsuk-Ulam is the Brower fixed point theorem:
+    \begin{thm}
+        \label{brower}
+        For any convex compact $K \subseteq \mathbb R^n$, a map $K \to K$ has a fixed point.
+    \end{thm}
+
+    We don't actually have to work at the leval of generality of Theorem \ref{brower}.
+
+    \begin{lem}
+        Every convex compact subset of $\mathbb R^n$ is homeomorphic to the unit ball, $B^n$.
+    \end{lem}
+    
     \newpage
 
     \section{Hex Game}
@@ -114,5 +180,10 @@
 
         However, we might run into a problem translating this back into the discrete case! What if some $z_i$ associated with $\mathbf x$ lies in $\left(k, k+1\right)$ for some $k \in \mathbb Z$? (I.e. we cut partially into one of the jewels.) Given a non-integral cut subdividing a stone of type $i$, where a portion of stone $i$ is assigned to the first thief, we know our cut is either unneccesary or there exists at least one other partial cut into stones of type $i$ assigned to thief one since the sums of lengths of stone $i$ intervals is an integer. In the latter case, we can move the first ``non-integral" cut to the right and the remaining to the left, without changing the loot for each thief.
     \end{proof}
+
+    Some generalizations blah blah
+
+    \bibliography{cite}
+    \bibliographystyle{plain}
     
 \end{document}
