chagned the git ignore

--- a/cite.bib
+++ b/cite.bib
@@ -14,3 +14,13 @@
   year={2003},
   publisher={Springer}
 }
+
+@article{alon,
+  title={The Borsuk-Ulam theorem and bisection of necklaces},
+  author={Alon, Noga and West, Douglas B},
+  journal={Proceedings of the American Mathematical Society},
+  volume={98},
+  number={4},
+  pages={623--628},
+  year={1986}
+}
